--- a/style/style.css
+++ b/style/style.css
@@ -187,15 +187,15 @@ img {
 .featured {
   align-items: center;
   justify-content: space-between;
-  margin: 100px 0 50px 0;
+  margin-top: 100px;
+  margin-bottom: 50px;
 }
 .featured-img {
   max-width: 460px;
   height: 350px;
 }
 .content {
-  max-width: 610px;
-  padding: 20px;
+  max-width: 530px;
 }
 .content h2 {
   color: rgb(10, 8, 38);
